<resources>
    <string name="app_name">StudiAry</string>
    <string name="label_pre_test">Pre-Test</string>
    <string name="done">DONE</string>
    <string name="label_welcome_back">Welcome Back</string>
    <string name="label_sign_in_to_continue">Sign in to continue</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="label_don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="hallo">Hallo!</string>
    <string name="label_sign_up_to_continue">Sign Up to continue</string>
    <string name="hint_name">Your Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hi">Hi!</string>
    <string name="this_is_your_study_target_list">This is your study target list</string>
    <string name="_0">0</string>
    <string name="label_days">days</string>
    <string name="sign_up">Sign Up</string>
    <string name="label_create_new_target">Create New Target</string>
    <string name="hint_subject">Course</string>
    <string name="hint_description">Description</string>
    <string name="label_target_finish">Target Finish</string>
    <string name="label_target_score">Target Score</string>
    <string name="submit">Submit</string>
    <string name="label_your_target">Your Target</string>
    <string name="label_predicted_score">Predicted Score</string>
    <string name="evaluation">Evaluation</string>
    <string name="study_time_week">Study Time / Week</string>
    <string name="label_free_time_week">Free Time / Week</string>
    <string name="add_target">Add Target</string>
    <string name="error_login">Username/Password Invalid</string>
    <string name="success_login">Login Successful</string>
    <string name="hint_username">Username</string>
    <string name="success_sign_up">Sign Up Successful</string>
    <string name="error_sign_up">Sign Up Failed</string>
    <string name="error">Something Wrong!</string>
    <string name="error_subject">Choose your course first!</string>
    <string name="error_target_score">Score cannot be nol or empty!</string>
    <string name="error_description">Description Cannot Be Empty</string>
    <string name="label_select_course">Select Course</string>
    <string name="error_add_target">Failed to Submit!</string>
    <string name="hint_password">Password</string>
    <string name="label_free_time">Free Time: </string>
    <string name="label_study_time">Study Time:</string>
    <string name="_2_h"><![CDATA[<2 Hours]]></string>
    <string name="_2_5_hours">2-5 Hours</string>
    <string name="_5_10_hours">5-10 Hours</string>
    <string name="_10_hours"><![CDATA[>10 Hours]]></string>
    <string name="_5_8_hours">5-8 Hours</string>
    <string name="_8_15_hours">8-15 Hours</string>
    <string name="_15_hours"><![CDATA[>15 Hours]]></string>
</resources>