<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.login.SignInFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_app"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@mipmap/ic_app_round"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_sign_in" />

    <TextView
        android:id="@+id/label_welcome"
        style="@style/Theme.StudiAry.TextHeadline1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_welcome_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_sign_in"
        style="@style/Theme.StudiAry.TextBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_in_to_continue"
        app:layout_constraintStart_toStartOf="@id/label_welcome"
        app:layout_constraintTop_toBottomOf="@id/label_welcome" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/hint_email"
        android:background="@drawable/bg_et_rounded_black_border"
        android:drawableStart="@drawable/ic_email_grey"
        android:drawablePadding="16dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:background="@drawable/bg_et_rounded_black_border"
        android:drawableStart="@drawable/ic_padlock_grey"
        android:drawablePadding="16dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/et_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <TextView
        android:id="@+id/tv_forget_password"
        style="@style/Theme.StudiAry.TextHeadline2.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toEndOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_in"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password"
        app:layout_constraintVertical_bias="0.425" />

    <TextView
        android:id="@+id/label_no_account"
        style="@style/Theme.StudiAry.TextBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/label_don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_create_account"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_create_account"
        style="@style/Theme.StudiAry.TextBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_an_account"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/label_no_account"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>