<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.login.SignUpFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/et_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_sign_up"
        android:src="@mipmap/ic_app"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/label_hallo"
        style="@style/Theme.StudiAry.TextHeadline1.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/hallo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_sign_up"
        style="@style/Theme.StudiAry.TextBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_up_to_continue"
        app:layout_constraintStart_toStartOf="@id/label_hallo"
        app:layout_constraintTop_toBottomOf="@id/label_hallo" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/hint_name"
        android:background="@drawable/bg_et_rounded_black_border"
        android:drawableStart="@drawable/ic_user_profile_grey"
        android:drawablePadding="16dp"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_username_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_username_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_et_rounded_black_border"
        android:drawableStart="@drawable/ic_user_profile_grey"
        android:drawablePadding="16dp"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/hint_name"
        android:background="@drawable/bg_et_rounded_black_border"
        android:drawableStart="@drawable/ic_padlock_grey"
        android:drawablePadding="16dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username_sign_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_up"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintVertical_bias="0.425"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/label_has_account"
        style="@style/Theme.StudiAry.TextBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_sign_in"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_sign_in"
        style="@style/Theme.StudiAry.TextBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_in"
        android:textColor="#E040FB"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/label_has_account"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progress_bar_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>